2006-11-20  Nurdin Premji  <npremji@redhat.com>

	* ProcBlockObserver.java (ProcBlockTaskObserver.updateExecuted): Changed to call existingTask in
	a new event. Bug found by TestProcForceDetach. 
	* TestProcForceDetach.java: Changed to use ProcBlockObserver. Added (C).
	
	* DummyHost.java (sendRefresh): Changed to use ProcId rather than int.
	(requestFindProc): 	Ditto.
	* TestFindProc.java (MyFinder): Changed to hold expected ProcId for assertion purposes.
	(testFindFailed): Changed to use ProcId rather than int.
	(doFindProc):  Ditto. Check that the pids are the same.
	* LinuxHost.java (sendRefresh): Changed to use ProcId rather than int.
	* HostState.java (running.handleRefresh): Changed to use ProcId rather than int.
	(handleRefresh): Ditto.
	* Host.java (FindProc.procFound): Changed to use ProcId rather than proc.
	(FindProc.procNotFound): Renamed from procFoundFailed.
	(requestFindProc): Changed to use ProcID rather than int.
	(sendRefresh): Ditto.

2006-11-20  Andrew Cagney  <cagney@redhat.com>

	* TestTaskSyscallObserver.java: Add message to fail call.

2006-11-17  Nurdin Premji  <npremji@redhat.com>

	* Host.java (FindProc): Added, new interface for finding processes.
	(requestFindProc): Added.
	(sendRefresh): Added.
	* TestFindProc.java: Added.
	* DummyHost.java (sendRefresh): Added.
	* LinuxHost.java (sendRefresh): Added.
	* HostState.java (running.handleRefresh): Added.
	(handleRefresh): Added.
	
2006-11-16  Nurdin Premji  <npremji@redhat.com>

	* TestAbandon.java: Added.
	* ProcState.java (Attaching.ToMainTask.handleDetach): Added.
	
	* Proc.java (performDetach.execute): Changed to use new parameter shouldRemoveObservers = false.
	(requestAbandonAndRunEvent): Changed to call requestAbandon.
	(requestAbandon): Added new line to log message.
	* ProcBlockObserver.java (requestAdd.execute): Changed to add observer to the non-main tasks to...
	(ProcBlockTaskObserver.updateExecuted): ... here.
	(ProcBlockTaskObserver): Implemented TaskObserver.Terminated.